--- a/app/src/main/res/layout/chart_marker_view.xml
+++ b/app/src/main/res/layout/chart_marker_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/test"
         android:layout_width="90dp"
         android:gravity="center"
