--- a/app/src/main/res/layout/fragment_setting_widget.xml
+++ b/app/src/main/res/layout/fragment_setting_widget.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:padding="@dimen/padding_small">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/diyClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/widgetText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="显示提醒"
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="提醒内容"
