--- a/app/src/main/res/layout/fragment_setting_widget_clickevent.xml
+++ b/app/src/main/res/layout/fragment_setting_widget_clickevent.xml
@@ -19,7 +19,7 @@
             android:paddingLeft="@dimen/padding_small"
             android:paddingTop="@dimen/padding_small">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/clickEvent"
@@ -65,7 +65,7 @@
 
             </RadioGroup>
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_small"
