--- a/app/src/main/res/layout/widget_1.xml
+++ b/app/src/main/res/layout/widget_1.xml
@@ -40,7 +40,7 @@
     </LinearLayout>
 
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/center"
         android:layout_width="10dp"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/appwidget_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
                 android:layout_marginLeft="@dimen/lineHeight"
                 android:orientation="vertical">
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/appwidget_wea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
                     tools:text="小雨"
                     tools:textColor="@color/widget_main_text" />
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/appwidget_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/appwidget_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
