--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,12 @@
 
     <!--  default  -->
     <color name="theme">#009FE8</color>
+    <color name="theme_dark">#0585BF</color>
     <color name="background">#FAFAFA</color>
     <color name="main_text">#0d131c</color>
     <color name="secondary_text">#7C7C7C</color>
     <color name="white_text">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="placeholder_text">#D3D1D1</color>
     <color name="hr">#f0f0f0</color>
 
