--- a/app/src/main/res/layout/widget_2.xml
+++ b/app/src/main/res/layout/widget_2.xml
@@ -40,7 +40,7 @@
 
     </LinearLayout>
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/center2"
         android:layout_width="10dp"
         android:layout_height="match_parent"
@@ -63,7 +63,7 @@
             android:gravity="center|top"
             android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/appwidget2_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
             android:layout_toRightOf="@id/rightCity"
             android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/appwidget2_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
                 tools:text="0404"
                 tools:textColor="@color/widget_main_text" />
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/appwidget2_wea"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
 
     </RelativeLayout>
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/appwidget2_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
         tools:text="下雨天"
         tools:textColor="@color/widget_main_text" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/appwidget2_tip2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
