--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -2,8 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/mainView"
@@ -11,13 +10,52 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/padding_small">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_small"
+                android:text="@string/change_city"
+                android:textColor="@color/main_text"
+                android:textSize="@dimen/setting_title_size" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/edit_city"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon"
+                android:layout_marginStart="@dimen/margin_small"
+                android:background="@drawable/ic_edit" />
+        </LinearLayout>
+
+
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/groupCity"
-            android:layout_margin="@dimen/margin_small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_small"
             app:selectionRequired="true"
             app:singleSelection="true" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/groupCityEdit"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_small" />
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="@dimen/lineHeight"
+            android:layout_gravity="center"
+            android:background="@color/theme" />
 
         <FrameLayout
             android:id="@+id/setting_test"
@@ -27,8 +65,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_marginStart="@dimen/margin_small"
+            android:orientation="vertical"
             android:padding="@dimen/padding_small">
 
             <LinearLayout
@@ -46,19 +84,17 @@
 
                 <com.weather.util.ColorSeekBar
                     android:id="@+id/colorPicker"
-                    android:layout_margin="@dimen/margin_small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="@dimen/seekbar_height">
-                </com.weather.util.ColorSeekBar>
+                    android:layout_margin="@dimen/margin_small"
+                    android:minHeight="@dimen/seekbar_height"></com.weather.util.ColorSeekBar>
 
                 <com.weather.util.ColorSeekBar
                     android:id="@+id/colorGradient"
-                    android:layout_margin="@dimen/margin_small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="@dimen/seekbar_height">
-                </com.weather.util.ColorSeekBar>
+                    android:layout_margin="@dimen/margin_small"
+                    android:minHeight="@dimen/seekbar_height"></com.weather.util.ColorSeekBar>
 
             </LinearLayout>
 
