--- a/app/src/main/res/layout/layout_chip_editable.xml
+++ b/app/src/main/res/layout/layout_chip_editable.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.MaterialComponents.Chip.Entry"
     android:clickable="true"
+    android:checkable="false"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:text="@string/app_name"
